--- a/PR-8(admin panel)/views/view_exsubcatagory.ejs
+++ b/PR-8(admin panel)/views/view_exsubcatagory.ejs
@@ -6,6 +6,13 @@
     <!-- ============================================================== -->
     <div class="page-breadcrumb">
       <div class="row">
+        <% if(locals.massage.danger) { %>
+          <div class="alert alert-danger" role="alert">
+            <%= locals.massage.danger %>
+          </div>
+        <% } %>
+
+
         <div class="col-12 d-flex no-block align-items-center">
           <h4 class="page-title">Tables</h4>
           <div class="ms-auto text-end">
@@ -55,7 +62,7 @@
                           <%= ++i %>
                       </th>
                       <td>
-                          <%= exs.catagoryId.catagory_name %>
+                          <%= exs.catagoryId?.catagory_name %>
                       </td>
                       <td>
                         <%= exs.subcatagoryId.subcatagory %>
@@ -65,7 +72,7 @@
                       </td>
                       <td>
                         <a href="/exsubcatagory/deleteexsubcatagory?id=<%= exs.id  %>" class="btn btn-danger">Delete</a> 
-                        <a href="/exsubcatagory/editexsubcatagory?id=<%= exs.id  %>" class="btn btn-primary">Edit</a>
+                        <a href="/exsubcatagory/editexsubcatagory?id=<%= exs.id  %>" class="btn btn-info">Edit</a>
 
                       </td>
                       <td>
