--- a/PR-8(admin panel)/views/view_product.ejs
+++ b/PR-8(admin panel)/views/view_product.ejs
@@ -32,6 +32,12 @@
       <!-- Start Page Content -->
       <!-- ============================================================== -->
       <div class="row">
+        <% if(locals.massage.danger) { %>
+          <div class="alert alert-danger" role="alert">
+            <%= locals.massage.danger %>
+          </div>
+        <% } %>
+
         <div class="col-12">
           <div class="card">
             <div class="card-body">
@@ -61,7 +67,7 @@
 
                       
                       <td>
-                          <%= p.catagoryId.catagory_name %>
+                          <%= p.catagoryId?.catagory_name %>
                       </td>
                       <td>
                         <%= p.subcatagoryId.subcatagory %>
@@ -83,7 +89,7 @@
                       </td>
                       <td>
                         <a href="/product/deleteproduct?id=<%= p.id  %>" class="btn btn-danger">Delete</a> 
-                        <a href="/product/editproduct?id=<%= p.id  %>" class="btn btn-primary">Edit</a>
+                        <a href="/product/editproduct?id=<%= p.id  %>" class="btn btn-info">Edit</a>
 
                       </td>
 
