--- a/PR-8(admin panel)/views/view_subcatagory.ejs
+++ b/PR-8(admin panel)/views/view_subcatagory.ejs
@@ -6,6 +6,12 @@
     <!-- ============================================================== -->
     <div class="page-breadcrumb">
       <div class="row">
+        <% if(locals.massage.danger) { %>
+          <div class="alert alert-danger" role="alert">
+            <%= locals.massage.danger %>
+          </div>
+        <% } %>
+
         <div class="col-12 d-flex no-block align-items-center">
           <h4 class="page-title">Tables</h4>
           <div class="ms-auto text-end">
@@ -54,14 +60,14 @@
                           <%= ++i %>
                       </td>
                       <td>
-                          <%= val.catagoryId.catagory_name %>
+                          <%= val.catagoryId?.catagory_name %>
                       </td>
                       <td>
                           <%= val.subcatagory %>
                       </td>
                       <td>
                         <a href="/subcatagory/deletesubcatagory?id=<%= val.id  %>" class="btn btn-danger">Delete</a> 
-                        <a href="/subcatagory/editsubcatagory?id=<%= val.id  %>" class="btn btn-primary">Edit</a>
+                        <a href="/subcatagory/editsubcatagory?id=<%= val.id  %>" class="btn btn-info">Edit</a>
                       </td>
                       <td>
                         <% if( val.status == "active") { %>
